@@ -1,5 +1,8 @@
 LOG:
 
+         - 0.5.24 the client side code (lixac) passed valgrind memory leak
+                  inspection for all the test cases
+
 20101124 - 0.5.23 fixed bug # 3110744
 
 20101122 - 0.5.22 fixed bug # 3110828
